Fix overflowing notification pager container border

--- a/src/scss/style/menus/notifications.scss
+++ b/src/scss/style/menus/notifications.scss
@@ -208,6 +208,7 @@
 
 .notification-menu-pager {
     background: $bar-menus-menu-notifications-pager-background;
+    margin-bottom: 0.1em;
     border-radius: $bar-menus-border-radius;
     border-top-left-radius: 0em;
     border-top-right-radius: 0em;
